# spec/openapi/openapi.json
@@ -606,16 +606,6 @@
           }
         }
       },
-      "TelegramLinkConfirmRequest" : {
-        "type" : "object",
-        "required" : [ "token" ],
-        "properties" : {
-          "token" : {
-            "type" : "string",
-            "pattern" : "\\S"
-          }
-        }
-      },
       "TelegramLinkRequest" : {
         "type" : "object",
         "required" : [ "token", "initData" ],
@@ -839,31 +829,15 @@
         "tags" : [ "Account Link Resource" ]
       }
     },
-    "/auth/link/telegram" : {
-      "delete" : {
+    "/auth/link/telegram/complete" : {
+      "post" : {
         "parameters" : [ {
-          "name" : "token",
-          "in" : "query",
+          "name" : "habbit_runner_csrf_token",
+          "in" : "cookie",
           "schema" : {
             "type" : "string"
           }
         } ],
-        "responses" : {
-          "200" : {
-            "description" : "OK",
-            "content" : {
-              "application/json" : {
-                "schema" : { }
-              }
-            }
-          }
-        },
-        "summary" : "Cancel Telegram Link",
-        "tags" : [ "Account Link Resource" ]
-      }
-    },
-    "/auth/link/telegram/complete" : {
-      "post" : {
         "requestBody" : {
           "content" : {
             "application/json" : {
@@ -888,35 +862,6 @@
           }
         },
         "summary" : "Complete Telegram Link",
-        "tags" : [ "Account Link Resource" ]
-      }
-    },
-    "/auth/link/telegram/confirm" : {
-      "post" : {
-        "requestBody" : {
-          "content" : {
-            "application/json" : {
-              "schema" : {
-                "$ref" : "#/components/schemas/TelegramLinkConfirmRequest"
-              }
-            }
-          },
-          "required" : true
-        },
-        "responses" : {
-          "200" : {
-            "description" : "OK",
-            "content" : {
-              "application/json" : {
-                "schema" : { }
-              }
-            }
-          },
-          "400" : {
-            "description" : "Bad Request"
-          }
-        },
-        "summary" : "Confirm Telegram Link",
         "tags" : [ "Account Link Resource" ]
       }
     },
@@ -949,29 +894,6 @@
           }
         },
         "summary" : "Start Telegram Link",
-        "tags" : [ "Account Link Resource" ]
-      }
-    },
-    "/auth/link/telegram/status" : {
-      "get" : {
-        "parameters" : [ {
-          "name" : "token",
-          "in" : "query",
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "OK",
-            "content" : {
-              "application/json" : {
-                "schema" : { }
-              }
-            }
-          }
-        },
-        "summary" : "Telegram Link Status",
         "tags" : [ "Account Link Resource" ]
       }
     },
